Remove test url

--- a/static/html/editor.html
+++ b/static/html/editor.html
@@ -89,7 +89,7 @@
                                     <label>
                                         <input id="inlineradio1" name="sampleinlineradio" value="option1" type="radio" checked/>URL :
                                     </label>
-                                    <input id="img-url" type="" name="" value="/static/img/bg1.jpg" style="width:400px;margin-left:50px" />
+                                    <input id="img-url" type="" name="" style="width:400px;margin-left:50px" />
                                 </div>
                                 <div class="radio" style="display:flex;">
                                     <label>
