--- a/static/html/editor.html
+++ b/static/html/editor.html
@@ -5,8 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="shortcut icon" href="../static/img/favico.ico" type="image/x-icon">
-    <link href="http://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Roboto:400,300,500,900" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,500,900" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" media="all" />
     <!-- <link rel="stylesheet" type="text/css" href="../css/theme.css"  media="all" /> -->
     <link rel="stylesheet" type="text/css" href="../css/responsive.css" media="all" />
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-default" style="height:50px;margin-bottom:0px;">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <a style="display:block" href="/project">
+            <a style="display:block" href="">
                 <div class="navbar-header"></div>
             </a>
             <!-- Collect the nav links, forms, and other content for toggling -->
