[client-only] Add default grid background, change styles

--- a/static/html/canvas.html
+++ b/static/html/canvas.html
@@ -16,7 +16,7 @@
 <body>
     <a-scene vr-mode-ui="enabled: false">
         <!-- BACKGROUND -->
-        <a-sky id="background">
+        <a-sky id="background" src="../img/grid4.jpg" >
             <a-animation attribute="material.color" begin="fade-out" from="white" to="black" dur="2000"></a-animation>
             <a-animation attribute="material.color" begin="fade-in" from="black" to="white" dur="2000"></a-animation>
         </a-sky>
