--- a/static/html/editor.html
+++ b/static/html/editor.html
@@ -65,8 +65,8 @@
             <div id="newImage" class="floating-panel-item" onclick="getImagePopup()">이미지 추가</div>
             <div id="newScene" class="floating-panel-item" onclick="createScene()">신 추가</div>
         </div>
-        <div id="main-canvas" class="col-md-8" style="height:100%;">
-            <iframe id="main_scene" class="main_scene" width="100%" height="100%" allowfullscreen="yes" scrolling="no" allowvr="yes" src="canvas.html"></iframe>
+        <div id="main-canvas" class="col-md-8" style="height:100%; padding:0;" >
+            <iframe id="main_scene" class="main_scene" width="100%" height="100%" allowfullscreen="yes" scrolling="no" allowvr="yes" src="canvas.html" frameborder="0"></iframe>
         </div>
     </div>
 </body>
